# CodeRun2

./: CMakeLists.txt  README.md
Backend/: CMakeLists.txt
Backend/BallsAndBaskets/: BallsAndBaskets.cpp  CMakeLists.txt
Backend/Combo/: CMakeLists.txt  Combo.cpp
Backend/CoupleOfLetters/: CMakeLists.txt  CoupleOfLetters.cpp  in
Backend/Crystals/: CMakeLists.txt  Crystals.cpp
Backend/CycleCreation/: CMakeLists.txt  CycleCreation.cpp
Backend/Divisors/: CMakeLists.txt  Divisors.cpp
Backend/FairDivision/: CMakeLists.txt  FairDivision.cpp  in
Backend/GCD/: GCD.py
Backend/GraphDegradation/: CMakeLists.txt  GraphDegradation.cpp  in
Backend/Guess/: CMakeLists.txt  Guess.cpp
Backend/Intervals/: CMakeLists.txt  Intervals.cpp  in
Backend/Marathon/: CMakeLists.txt  Marathon.cpp  in
Backend/MaxSquare/: CMakeLists.txt  MaxSquare.cpp  in
Backend/NearestBusStop/: CMakeLists.txt  NearestBusStop.cpp
Backend/PairCodes/: CMakeLists.txt  PairCodes.cpp
Backend/Queens/: CMakeLists.txt  Queens.cpp
Backend/Scoreboard/: CMakeLists.txt  Scoreboard.cpp
Backend/SubstitutionCode/: CMakeLists.txt  SubstitutionCode.cpp  in
Backend/Sum/: CMakeLists.txt  Sum.cpp
Backend/Tables/: CMakeLists.txt  Tables.cpp
Backend/TeamOlympiad/: CMakeLists.txt  TeamOlympiad.cpp
Backend/TicTacToe/: CMakeLists.txt  TicTacToe.cpp
Backend/Tiles/: CMakeLists.txt  Tiles.cpp
Backend/TwoTeams/: CMakeLists.txt  TwoTeams.cpp
Backend/VacuumCleaner/: CMakeLists.txt  VacuumCleaner.cpp  in
Backend/WindowAverage/: CMakeLists.txt  WindowAverage.cpp
Backend/WorkSchedule/: CMakeLists.txt  (+1 more)
(+78 files in other folders)
