add_subdirectory(MaxSquare)
add_subdirectory(Queens)
add_subdirectory(Scoreboard)
add_subdirectory(TicTacToe)
add_subdirectory(Tiles)
add_subdirectory(Combo)
add_subdirectory(FairDivision)
add_subdirectory(GraphDegradation)
add_subdirectory(Marathon)
add_subdirectory(VacuumCleaner)
add_subdirectory(CycleCreation)
add_subdirectory(SubstitutionCode)
add_subdirectory(Tables)
add_subdirectory(WindowAverage)
add_subdirectory(Intervals)
add_subdirectory(Divisors)
add_subdirectory(Sum)
add_subdirectory(TeamOlympiad)
add_subdirectory(BallsAndBaskets)
add_subdirectory(NearestBusStop)
add_subdirectory(WorkSchedule)
add_subdirectory(CoupleOfLetters)
add_subdirectory(Crystals)
add_subdirectory(TwoTeams)
add_subdirectory(PairCodes)
add_subdirectory(Guess)